Improved date-time picking

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Name="HomeViewPage" x:Class="TemporaTasks.Pages.HomeView"
+﻿<Page x:Name="HomePagePage" x:Class="TemporaTasks.Pages.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
