--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -40,4 +40,27 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--https://www.svgrepo.com/svg/513101/calendar-->
+
+    <DrawingImage x:Key="calendarIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V64 H64 V0 H0 Z">
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M11,54L17,54C17.553,54,18,53.553,18,53L18,48C18,47.447,17.553,47,17,47L11,47C10.447,47,10,47.447,10,48L10,53C10,53.553,10.447,54,11,54z M12,49L16,49 16,52 12,52 12,49z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M23,54L29,54C29.553,54,30,53.553,30,53L30,48C30,47.447,29.553,47,29,47L23,47C22.447,47,22,47.447,22,48L22,53C22,53.553,22.447,54,23,54z M24,49L28,49 28,52 24,52 24,49z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M35,54L41,54C41.553,54,42,53.553,42,53L42,48C42,47.447,41.553,47,41,47L35,47C34.447,47,34,47.447,34,48L34,53C34,53.553,34.447,54,35,54z M36,49L40,49 40,52 36,52 36,49z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M11,43L17,43C17.553,43,18,42.553,18,42L18,37C18,36.447,17.553,36,17,36L11,36C10.447,36,10,36.447,10,37L10,42C10,42.553,10.447,43,11,43z M12,38L16,38 16,41 12,41 12,38z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M23,43L29,43C29.553,43,30,42.553,30,42L30,37C30,36.447,29.553,36,29,36L23,36C22.447,36,22,36.447,22,37L22,42C22,42.553,22.447,43,23,43z M24,38L28,38 28,41 24,41 24,38z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M35,43L41,43C41.553,43,42,42.553,42,42L42,37C42,36.447,41.553,36,41,36L35,36C34.447,36,34,36.447,34,37L34,42C34,42.553,34.447,43,35,43z M36,38L40,38 40,41 36,41 36,38z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M47,43L53,43C53.553,43,54,42.553,54,42L54,37C54,36.447,53.553,36,53,36L47,36C46.447,36,46,36.447,46,37L46,42C46,42.553,46.447,43,47,43z M48,38L52,38 52,41 48,41 48,38z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M11,32L17,32C17.553,32,18,31.553,18,31L18,26C18,25.447,17.553,25,17,25L11,25C10.447,25,10,25.447,10,26L10,31C10,31.553,10.447,32,11,32z M12,27L16,27 16,30 12,30 12,27z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M23,32L29,32C29.553,32,30,31.553,30,31L30,26C30,25.447,29.553,25,29,25L23,25C22.447,25,22,25.447,22,26L22,31C22,31.553,22.447,32,23,32z M24,27L28,27 28,30 24,30 24,27z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M35,32L41,32C41.553,32,42,31.553,42,31L42,26C42,25.447,41.553,25,41,25L35,25C34.447,25,34,25.447,34,26L34,31C34,31.553,34.447,32,35,32z M36,27L40,27 40,30 36,30 36,27z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M47,32L53,32C53.553,32,54,31.553,54,31L54,26C54,25.447,53.553,25,53,25L47,25C46.447,25,46,25.447,46,26L46,31C46,31.553,46.447,32,47,32z M48,27L52,27 52,30 48,30 48,27z" />
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M64,64z M0,0z M60,4L53,4 53,3C53,1.343 51.657,0 50,0 48.343,0 47,1.343 47,3L47,4 17,4 17,3C17,1.343 15.657,0 14,0 12.343,0 11,1.343 11,3L11,4 4,4C1.789,4,0,5.789,0,8L0,60C0,62.211,1.789,64,4,64L60,64C62.211,64,64,62.211,64,60L64,8C64,5.789,62.211,4,60,4z M49,3C49,2.447 49.447,2 50,2 50.553,2 51,2.447 51,3L51,6 51,10C51,10.553 50.553,11 50,11 49.447,11 49,10.553 49,10L49,6 49,3z M13,3C13,2.447 13.447,2 14,2 14.553,2 15,2.447 15,3L15,6 15,10C15,10.553 14.553,11 14,11 13.447,11 13,10.553 13,10L13,6 13,3z M62,60C62,61.104,61.104,62,60,62L4,62C2.896,62,2,61.104,2,60L2,17 62,17 62,60z M62,15L2,15 2,8C2,6.896,2.896,6,4,6L11,6 11,10C11,11.657 12.343,13 14,13 15.657,13 17,11.657 17,10L17,6 47,6 47,10C47,11.657 48.343,13 50,13 51.657,13 53,11.657 53,10L53,6 60,6C61.104,6,62,6.896,62,8L62,15z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
 </ResourceDictionary>
