--- a/Pages/EditTaskPage.xaml
+++ b/Pages/EditTaskPage.xaml
@@ -34,19 +34,47 @@
 
                 <DockPanel Margin="0 5 0 5" Height="30">
 
-                    <Label Content="Task Name" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                    <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
                     <TextBox x:Name="TaskNameTextbox" DockPanel.Dock="Right"/>
 
                 </DockPanel>
 
-                <DockPanel Margin="0 5 0 5" Height="30">
+                <!--<DockPanel Margin="0 5 0 5" Height="30">
 
                     <Label Content="Date and Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
                     <xctk:DateTimePicker x:Name="DTPicker" Background="{DynamicResource Secondary}" BorderBrush="{DynamicResource Accent}" Foreground="{DynamicResource Text}"/>
 
-                </DockPanel>
+                </DockPanel>-->
+
+                <Grid Margin="0 5 0 5">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <DockPanel>
+                        <Popup x:Name="myPopUp" Placement="RelativePoint" StaysOpen="False" VerticalOffset="5" DockPanel.Dock="Left"/>
+                        <Label Content="Date" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                        <Border Width="40" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Focusable="False">
+                            <Border.Background>
+                                <SolidColorBrush  Opacity="0.25" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                            </Border.Background>
+                            <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="17" IsHitTestVisible="False"/>
+                        </Border>
+                        <!--<Button Width="40" Height="30" Click="Button_Click" DockPanel.Dock="Right"/>-->
+                        <TextBox x:Name="dateTextBox" DockPanel.Dock="Right"/>
+                    </DockPanel>
+
+
+                    <DockPanel Grid.Column="1">
+                        <Label Content="Time" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                        <TextBox x:Name="timeTextBox" />
+                    </DockPanel>
+
+                </Grid>
 
                 <Border x:Name="ConfirmButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="ConfirmButton_IsMouseDirectlyOverChanged" MouseDown="ConfirmButton_MouseDown" MouseMove="ConfirmButton_MouseMove" Margin="0 10 0 0" Height="40">
 
