--- a/UserControls/DateTimePicker.xaml
+++ b/UserControls/DateTimePicker.xaml
@@ -5,15 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TemporaTasks.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="220" d:DesignWidth="300"
-    >
+             d:DesignHeight="220" d:DesignWidth="300">
 
     <Border BorderBrush="{StaticResource Border}" BorderThickness="1">
 
         <DockPanel>
 
             <Border Background="{StaticResource TitleBar}" Height="40" DockPanel.Dock="Top">
-
                 <Grid>
 
                     <Grid.ColumnDefinitions>
@@ -41,7 +39,7 @@
                         </ComboBox>
                         <ComboBox x:Name="yearComboBox" ItemContainerStyle="{DynamicResource ComboBoxItemContainerStyle}" Width="75" Margin="5 0 0 0" SelectionChanged="ComboBox_SelectionChanged"/>
                     </StackPanel>
-                    
+
                     <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" Grid.Column="2" RenderTransformOrigin="0.5,0.5" MouseDown="NextIconButton_MouseDown">
                         <local:IconButton.RenderTransform>
                             <TransformGroup>
@@ -51,10 +49,9 @@
                     </local:IconButton>
 
                 </Grid>
-                
             </Border>
 
-            <Border Background="{StaticResource Background}" DockPanel.Dock="Bottom">
+            <Border Background="{StaticResource Background}" DockPanel.Dock="Bottom" Padding="10">
 
                 <Grid x:Name="calendarGrid">
 
@@ -77,13 +74,13 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Label Content="Sun" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
-                    <Label Content="Mon" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
-                    <Label Content="Tue" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
-                    <Label Content="Wed" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
-                    <Label Content="Thu" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
-                    <Label Content="Fri" Grid.Column="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
-                    <Label Content="Sat" Grid.Column="6" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0"/>
+                    <Label Content="Sun" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
+                    <Label Content="Mon" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
+                    <Label Content="Tue" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
+                    <Label Content="Wed" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
+                    <Label Content="Thu" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
+                    <Label Content="Fri" Grid.Column="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
+                    <Label Content="Sat" Grid.Column="6" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Foreground="White" Padding="0 0 0 5"/>
 
                 </Grid>
 
@@ -92,5 +89,5 @@
         </DockPanel>
 
     </Border>
-    
+
 </UserControl>
