--- a/Pages/EditTaskPage.xaml
+++ b/Pages/EditTaskPage.xaml
@@ -12,21 +12,7 @@
 
     <Grid Margin="50 0 50 0">
 
-        <StackPanel Margin="0 50 0 0" VerticalAlignment="Top" Orientation="Horizontal">
-
-            <userControl:IconButton x:Name="BackIcon" SVGSource="{StaticResource backIcon}" Width="30" Height="30" Margin="0 0 10 0" MouseDown="BackIcon_MouseDown" Opacity="1">
-                <userControl:IconButton.ToolTip>
-                    <ToolTip>
-                        <ToolTip.Content>
-                            <userControl:ButtonToolTip ToolTipText="Go Back" Button1Text="esc"/>
-                        </ToolTip.Content>
-                    </ToolTip>
-                </userControl:IconButton.ToolTip>
-            </userControl:IconButton>
-
-            <Label x:Name="label" Content="Edit Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Bottom" Padding="0,0,0,0"/>
-
-        </StackPanel>
+        <Label x:Name="label" Content="Edit Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0" Margin="0 50 0 0"/>
 
         <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 110 0 0" Focusable="False">
 
@@ -64,7 +50,6 @@
                             </Border.Background>
                             <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="12" IsHitTestVisible="False"/>
                         </Border>
-                        <!--<Button Width="40" Height="30" Click="Button_Click" DockPanel.Dock="Right"/>-->
                         <TextBox x:Name="dateTextBox" DockPanel.Dock="Right"/>
                     </DockPanel>
 
@@ -75,41 +60,45 @@
 
                 </Grid>
 
-                <Border x:Name="ConfirmButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="ConfirmButton_IsMouseDirectlyOverChanged" MouseDown="ConfirmButton_MouseDown" MouseMove="ConfirmButton_MouseMove" Margin="0 10 0 0" Height="40">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
 
-                    <Border.Background>
-                        <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                    </Border.Background>
+                    <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="CancelButton_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="CancelButton_MouseMove" Margin="0 10 10 0" Height="40">
 
-                    <Border.ToolTip>
-                        <ToolTip>
-                            <ToolTip.Content>
-                                <userControl:ButtonToolTip ToolTipText="Confirm changes" Button1Text="enter"/>
-                            </ToolTip.Content>
-                        </ToolTip>
-                    </Border.ToolTip>
+                        <Border.Background>
+                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
+                        </Border.Background>
 
-                    <Label Content="Confirm" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Cancel changes" Button1Text="esc"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
 
-                </Border>
+                        <Label Content="Cancel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
 
-                <!--<Border x:Name="AddButton" HorizontalAlignment="Right" Height="40" CornerRadius="5" IsMouseDirectlyOverChanged="ConfirmButton_IsMouseDirectlyOverChanged" MouseDown="ConfirmButton_MouseDown" MouseMove="ConfirmButton_MouseMove" Margin="0 10 0 0">
+                    </Border>
 
-                    <Border.Background>
-                        <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
-                    </Border.Background>
+                    <Border x:Name="ConfirmButton" CornerRadius="5" IsMouseDirectlyOverChanged="ConfirmButton_IsMouseDirectlyOverChanged" MouseDown="ConfirmButton_MouseDown" MouseMove="ConfirmButton_MouseMove" Margin="0 10 0 0" Height="40">
 
-                    <Border.ToolTip>
-                        <ToolTip>
-                            <ToolTip.Content>
-                                <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
-                            </ToolTip.Content>
-                        </ToolTip>
-                    </Border.ToolTip>
+                        <Border.Background>
+                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                        </Border.Background>
 
-                    <Label Content="Confirm" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Confirm changes" Button1Text="enter"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
 
-                </Border>-->
+                        <Label Content="Confirm" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
+                    </Border>
+
+                </StackPanel>
 
                 <Rectangle Height="125"/>
 
