--- a/Pages/EditTaskPage.xaml
+++ b/Pages/EditTaskPage.xaml
@@ -5,7 +5,6 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TemporaTasks.Pages"
       xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EditTaskPage" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
@@ -26,14 +25,6 @@
 
                 </DockPanel>
 
-                <!--<DockPanel Margin="0 5 0 5" Height="30">
-
-                    <Label Content="Date and Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-
-                    <xctk:DateTimePicker x:Name="DTPicker" Background="{DynamicResource Secondary}" BorderBrush="{DynamicResource Accent}" Foreground="{DynamicResource Text}"/>
-
-                </DockPanel>-->
-
                 <Grid Margin="0 5 0 5" Height="30">
 
                     <Grid.ColumnDefinitions>
@@ -42,27 +33,35 @@
                     </Grid.ColumnDefinitions>
 
                     <DockPanel>
-                        <Popup x:Name="myPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10" DockPanel.Dock="Left"/>
+                        
+                        <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10" DockPanel.Dock="Left"/>
+                        
                         <Label Content="Date" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-                        <Border x:Name="calendarButtonBorder" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="Border_MouseUp" Focusable="False" Padding="10 0 10 0">
+                        
+                        <Border x:Name="calendarButtonBorder" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="calendar_MouseUp" Focusable="False" Padding="10 0 10 0">
                             <Border.Background>
-                                <SolidColorBrush  Opacity="0.25" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                                <SolidColorBrush  Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
                             </Border.Background>
                             <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="12" IsHitTestVisible="False"/>
                         </Border>
-                        <TextBox x:Name="dateTextBox" DockPanel.Dock="Right"/>
+
+                        <Border x:Name="DateBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                            <TextBox x:Name="dateTextBox" DockPanel.Dock="Right" BorderThickness="10,1,1,1"/>
+                        </Border>
                     </DockPanel>
 
                     <DockPanel Grid.Column="1">
                         <Label Content="Time" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="20,0,10,0"/>
-                        <TextBox x:Name="timeTextBox" />
+                        <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                            <TextBox x:Name="timeTextBox"/>
+                        </Border>
                     </DockPanel>
 
                 </Grid>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
 
-                    <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="CancelButton_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="CancelButton_MouseMove" Margin="0 10 10 0" Height="40">
+                    <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 10 0" Height="40">
 
                         <Border.Background>
                             <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
@@ -80,7 +79,7 @@
 
                     </Border>
 
-                    <Border x:Name="ConfirmButton" CornerRadius="5" IsMouseDirectlyOverChanged="ConfirmButton_IsMouseDirectlyOverChanged" MouseDown="ConfirmButton_MouseDown" MouseMove="ConfirmButton_MouseMove" Margin="0 10 0 0" Height="40">
+                    <Border x:Name="ConfirmButton" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="ConfirmButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 0 0" Height="40">
 
                         <Border.Background>
                             <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
