--- a/Pages/NewTaskPage.xaml
+++ b/Pages/NewTaskPage.xaml
@@ -12,21 +12,7 @@
 
     <Grid Margin="50 0 50 0">
 
-        <StackPanel Margin="0 50 0 0" VerticalAlignment="Top" Orientation="Horizontal">
-
-            <userControl:IconButton x:Name="BackIcon" SVGSource="{StaticResource backIcon}" Width="30" Height="30" Margin="0 0 10 0" MouseDown="BackIcon_MouseDown" Opacity="1">
-                <userControl:IconButton.ToolTip>
-                    <ToolTip>
-                        <ToolTip.Content>
-                            <userControl:ButtonToolTip ToolTipText="Go Back" Button1Text="esc"/>
-                        </ToolTip.Content>
-                    </ToolTip>
-                </userControl:IconButton.ToolTip>
-            </userControl:IconButton>
-
-            <Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Bottom" Padding="0,0,0,0"/>
-
-        </StackPanel>
+        <Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0" Margin="0 50 0 0"/>
 
         <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 110 0 0" Focusable="False">
 
@@ -34,37 +20,85 @@
 
                 <DockPanel Margin="0 5 0 5" Height="30">
 
-                    <Label Content="Task Name" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                    <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
                     <TextBox x:Name="TaskNameTextbox" DockPanel.Dock="Right"/>
 
                 </DockPanel>
 
-                <DockPanel Margin="0 5 0 5" Height="30">
+                <Grid Margin="0 5 0 5" Height="30">
 
-                    <Label Content="Date and Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1.25*"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
 
-                    <xctk:DateTimePicker x:Name="DTPicker" Background="{DynamicResource Secondary}" BorderBrush="{DynamicResource Accent}" Foreground="{DynamicResource Text}"/>
+                    <DockPanel>
 
-                </DockPanel>
+                        <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10" DockPanel.Dock="Left"/>
 
-                <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="AddButton_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="AddButton_MouseMove" Margin="0 10 0 0" Height="40">
+                        <Label Content="Date" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
-                    <Border.Background>
-                        <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                    </Border.Background>
+                        <Border x:Name="calendarButtonBorder" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="calendar_MouseUp" Focusable="False" Padding="10 0 10 0">
+                            <Border.Background>
+                                <SolidColorBrush  Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                            </Border.Background>
+                            <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="12" IsHitTestVisible="False"/>
+                        </Border>
 
-                    <Border.ToolTip>
-                        <ToolTip>
-                            <ToolTip.Content>
-                                <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
-                            </ToolTip.Content>
-                        </ToolTip>
-                    </Border.ToolTip>
+                        <Border x:Name="DateBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                            <TextBox x:Name="dateTextBox" DockPanel.Dock="Right" BorderThickness="10,1,1,1"/>
+                        </Border>
+                    </DockPanel>
 
-                    <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                    <DockPanel Grid.Column="1">
+                        <Label Content="Time" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="20,0,10,0"/>
+                        <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                            <TextBox x:Name="timeTextBox"/>
+                        </Border>
+                    </DockPanel>
 
-                </Border>
+                </Grid>
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+
+                    <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 0 0" Height="40">
+
+                        <Border.Background>
+                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
+                        </Border.Background>
+
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
+
+                        <Label Content="Cancel Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
+                    </Border>
+
+                    <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 10 0 0" Height="40">
+
+                        <Border.Background>
+                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                        </Border.Background>
+
+                        <Border.ToolTip>
+                            <ToolTip>
+                                <ToolTip.Content>
+                                    <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
+                                </ToolTip.Content>
+                            </ToolTip>
+                        </Border.ToolTip>
+
+                        <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
+                    </Border>
+
+                </StackPanel>
 
                 <Rectangle Height="125"/>
 
