--- a/Pages/NewTaskPage.xaml
+++ b/Pages/NewTaskPage.xaml
@@ -10,101 +10,111 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="NewTaskPage" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
 
-    <Grid Margin="50 0 50 0">
+    <Grid>
 
-        <Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0" Margin="0 50 0 0"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MaxWidth="50"/>
+            <ColumnDefinition MinWidth="300"/>
+            <ColumnDefinition MaxWidth="50"/>
+        </Grid.ColumnDefinitions>
 
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 110 0 0" Focusable="False">
+        <Grid Grid.Column="1" MaxWidth="600" VerticalAlignment="Center">
 
-            <StackPanel>
+            <Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0" Margin="0 50 0 0"/>
 
-                <DockPanel Margin="0 5 0 5" Height="30">
+            <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 110 0 0" Focusable="False">
 
-                    <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                <StackPanel>
 
-                    <TextBox x:Name="TaskNameTextbox" DockPanel.Dock="Right"/>
+                    <DockPanel Margin="0 5 0 5" Height="30">
 
-                </DockPanel>
+                        <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
-                <Grid Margin="0 5 0 5" Height="30">
+                        <TextBox x:Name="TaskNameTextbox" DockPanel.Dock="Right"/>
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1.25*"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
+                    </DockPanel>
 
-                    <DockPanel>
+                    <Grid Margin="0 5 0 5" Height="30">
 
-                        <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10" DockPanel.Dock="Left"/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-                        <Label Content="Date" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                        <DockPanel>
 
-                        <Border x:Name="calendarButtonBorder" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="calendar_MouseUp" Focusable="False" Padding="10 0 10 0">
+                            <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10" DockPanel.Dock="Left"/>
+
+                            <Label Content="Date" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+
+                            <Border x:Name="calendarButtonBorder" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="calendar_MouseUp" Focusable="False" Padding="10 0 10 0">
+                                <Border.Background>
+                                    <SolidColorBrush  Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                                </Border.Background>
+                                <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="12" IsHitTestVisible="False"/>
+                            </Border>
+
+                            <Border x:Name="DateBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                                <TextBox x:Name="dateTextBox" DockPanel.Dock="Right" BorderThickness="10,1,1,1"/>
+                            </Border>
+                        </DockPanel>
+
+                        <DockPanel Grid.Column="1">
+                            <Label Content="Time" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="20,0,10,0"/>
+                            <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                                <TextBox x:Name="timeTextBox"/>
+                            </Border>
+                        </DockPanel>
+
+                    </Grid>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+
+                        <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 0 0" Height="40">
+
                             <Border.Background>
-                                <SolidColorBrush  Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                                <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
                             </Border.Background>
-                            <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="12" IsHitTestVisible="False"/>
+
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <ToolTip.Content>
+                                        <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
+                                    </ToolTip.Content>
+                                </ToolTip>
+                            </Border.ToolTip>
+
+                            <Label Content="Cancel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
                         </Border>
 
-                        <Border x:Name="DateBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
-                            <TextBox x:Name="dateTextBox" DockPanel.Dock="Right" BorderThickness="10,1,1,1"/>
+                        <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 10 0 0" Height="40">
+
+                            <Border.Background>
+                                <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                            </Border.Background>
+
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <ToolTip.Content>
+                                        <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
+                                    </ToolTip.Content>
+                                </ToolTip>
+                            </Border.ToolTip>
+
+                            <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
                         </Border>
-                    </DockPanel>
 
-                    <DockPanel Grid.Column="1">
-                        <Label Content="Time" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="20,0,10,0"/>
-                        <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
-                            <TextBox x:Name="timeTextBox"/>
-                        </Border>
-                    </DockPanel>
+                    </StackPanel>
 
-                </Grid>
-
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-
-                    <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 0 0" Height="40">
-
-                        <Border.Background>
-                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
-                        </Border.Background>
-
-                        <Border.ToolTip>
-                            <ToolTip>
-                                <ToolTip.Content>
-                                    <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
-                                </ToolTip.Content>
-                            </ToolTip>
-                        </Border.ToolTip>
-
-                        <Label Content="Cancel Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
-
-                    </Border>
-
-                    <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 10 0 0" Height="40">
-
-                        <Border.Background>
-                            <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                        </Border.Background>
-
-                        <Border.ToolTip>
-                            <ToolTip>
-                                <ToolTip.Content>
-                                    <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
-                                </ToolTip.Content>
-                            </ToolTip>
-                        </Border.ToolTip>
-
-                        <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
-
-                    </Border>
+                    <Rectangle Height="100"/>
 
                 </StackPanel>
 
-                <Rectangle Height="125"/>
+            </ScrollViewer>
 
-            </StackPanel>
-
-        </ScrollViewer>
+        </Grid>
 
     </Grid>
 
