--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
         xmlns:tb="http://www.hardcodet.net/taskbar" xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
         mc:Ignorable="d"
+        d:DesignHeight="450" d:DesignWidth="800"
         Title="TemporaTasks" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown" MinWidth="400" MinHeight="500" Loaded="Window_Loaded">
 
     <Grid Background="{StaticResource Background}">
@@ -32,6 +33,8 @@
             </tb:TaskbarIcon.ContextMenu>
 
         </tb:TaskbarIcon>
+
+        <Image Source="{StaticResource homePageBackground}" HorizontalAlignment="Left" VerticalAlignment="Bottom" MaxWidth="420" Margin="100 0 40 0" Grid.Row="1"/>
 
         <DockPanel Grid.Row="1">
 
