--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TemporaTasks.Pages.NewTaskPage"
+﻿<Page x:Class="TemporaTasks.Pages.AddTaskPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,7 @@
       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="NewTaskPage" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
+      Title="AddTaskPage" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
 
     <Grid>
 
@@ -30,7 +30,9 @@
 
                         <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
-                        <TextBox x:Name="TaskNameTextbox" DockPanel.Dock="Right"/>
+                        <Border x:Name="NameBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" DockPanel.Dock="Right">
+                            <TextBox x:Name="TaskNameTextbox"/>
+                        </Border>
 
                     </DockPanel>
 
