--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -7,7 +7,7 @@
       xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Home" Loaded="Page_Loaded" Unloaded="Page_Unloaded" MouseDown="Page_MouseDown">
+      Title="Home" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
 
     <Grid Margin="50 0 50 0">
 
@@ -37,12 +37,12 @@
 
         </DockPanel>
 
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 110 0 0" Focusable="False">
+        <ScrollViewer Style="{StaticResource CustomScrollViewerStyle}" HorizontalScrollBarVisibility="Disabled" Margin="0 110 -17 0" Focusable="False">
 
             <StackPanel x:Name="InnerStack">
 
                 <StackPanel x:Name="TaskStack"/>
-                <Rectangle Height="125"/>
+                <Rectangle Height="50"/>
 
             </StackPanel>
 
