--- a/UserControls/DateTimePicker.xaml
+++ b/UserControls/DateTimePicker.xaml
@@ -23,7 +23,7 @@
                     <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" MouseDown="BackIconButton_MouseDown"/>
 
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Orientation="Horizontal">
-                        <ComboBox x:Name="monthComboBox" ItemContainerStyle="{DynamicResource ComboBoxItemContainerStyle}" Width="100" Margin="0 0 5 0" SelectionChanged="ComboBox_SelectionChanged">
+                        <ComboBox x:Name="monthComboBox" Width="100" Margin="0 0 5 0" SelectionChanged="ComboBox_SelectionChanged">
                             <ComboBoxItem Content="January"/>
                             <ComboBoxItem Content="February"/>
                             <ComboBoxItem Content="March"/>
@@ -37,7 +37,7 @@
                             <ComboBoxItem Content="November"/>
                             <ComboBoxItem Content="December"/>
                         </ComboBox>
-                        <ComboBox x:Name="yearComboBox" ItemContainerStyle="{DynamicResource ComboBoxItemContainerStyle}" Width="75" Margin="5 0 0 0" SelectionChanged="ComboBox_SelectionChanged"/>
+                        <ComboBox x:Name="yearComboBox" Width="75" Margin="5 0 0 0" SelectionChanged="ComboBox_SelectionChanged"/>
                     </StackPanel>
 
                     <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" Grid.Column="2" RenderTransformOrigin="0.5,0.5" MouseDown="NextIconButton_MouseDown">
