Added searching mechanism

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -8,6 +8,18 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Home" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
+    
+    <Page.Resources>
+        <Style x:Key="DummyFocus" TargetType="{x:Type Control}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Control}">
+                        <Grid/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
 
     <Grid x:Name="MainGrid" Margin="50 0 50 0">
 
@@ -17,9 +29,16 @@
 
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
 
-                <Label Content="Sort by" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                <!--<Label Content="Sort by" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Border}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>-->
 
-                <ComboBox x:Name="SortComboBox" Margin="10 0 0 0" Width="100" VerticalContentAlignment="Center" SelectionChanged="SortComboBox_SelectionChanged" Focusable="False" FontFamily="TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Padding="12 0 0 0">
+                <Border x:Name="SearchBorder" Background="{StaticResource Secondary}" CornerRadius="5" Padding="5 0 5 0" IsMouseDirectlyOverChanged="SearchBorder_IsMouseDirectlyOverChanged" MouseDown="SearchBorder_MouseDown">
+                    <DockPanel>
+                        <Image Source="{StaticResource searchIcon}" Height="10" DockPanel.Dock="Right" Margin="10 0 10 0" IsHitTestVisible="False" x:Name="SearchIcon" RenderTransformOrigin="0.5,0.5"/>
+                        <TextBox x:Name="SearchTextBox" Width="0" Margin="0 5 0 5" TextChanged="SearchTextBox_TextChanged" IsTabStop="False"/>
+                    </DockPanel>
+                </Border>
+
+                <ComboBox x:Name="SortComboBox" Width="100" VerticalContentAlignment="Center" SelectionChanged="SortComboBox_SelectionChanged" Focusable="False" FontFamily="TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Padding="12 0 0 0" Margin="20 0 0 0">
                     <ComboBoxItem Content="Name"/>
                     <ComboBoxItem Content="Due Date"/>
                 </ComboBox>
@@ -44,7 +63,7 @@
 
             </StackPanel>
 
-            <Label x:Name="label" Content="Home" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" DockPanel.Dock="Left" Padding="0,0,0,0" VerticalContentAlignment="Stretch"/>
+            <Label FocusVisualStyle="{DynamicResource DummyFocus}" x:Name="label" Content="Home" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" DockPanel.Dock="Left" Padding="0,0,0,0" VerticalContentAlignment="Stretch" Focusable="True"/>
 
         </DockPanel>
 
