--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -102,4 +102,14 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--https://www.svgrepo.com/svg/521826/search-->
+
+    <DrawingImage x:Key="searchIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F0 M24,24z M0,0z M17.0392,15.6244C18.2714,14.084 19.0082,12.1301 19.0082,10.0041 19.0082,5.03127 14.9769,1 10.0041,1 5.03127,1 1,5.03127 1,10.0041 1,14.9769 5.03127,19.0082 10.0041,19.0082 12.1301,19.0082 14.084,18.2714 15.6244,17.0392L21.2921,22.707C21.6828,23.0977 22.3163,23.0977 22.707,22.707 23.0977,22.3163 23.0977,21.6828 22.707,21.2921L17.0392,15.6244z M10.0041,17.0173C6.1308,17.0173 2.99087,13.8774 2.99087,10.0041 2.99087,6.1308 6.1308,2.99087 10.0041,2.99087 13.8774,2.99087 17.0173,6.1308 17.0173,10.0041 17.0173,13.8774 13.8774,17.0173 10.0041,17.0173z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
 </ResourceDictionary>
