--- a/UserControls/DateTimePicker.xaml
+++ b/UserControls/DateTimePicker.xaml
@@ -20,10 +20,10 @@
                         <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
 
-                    <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" MouseDown="BackIconButton_MouseDown"/>
+                    <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" MouseDown="BackIconButton_MouseDown" Cursor="Hand"/>
 
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Orientation="Horizontal">
-                        <ComboBox x:Name="monthComboBox" Width="100" Margin="0 0 5 0" SelectionChanged="ComboBox_SelectionChanged">
+                        <ComboBox x:Name="monthComboBox" Width="100" Margin="0 0 5 0" SelectionChanged="ComboBox_SelectionChanged" Cursor="Hand">
                             <ComboBoxItem Content="January"/>
                             <ComboBoxItem Content="February"/>
                             <ComboBoxItem Content="March"/>
@@ -37,10 +37,10 @@
                             <ComboBoxItem Content="November"/>
                             <ComboBoxItem Content="December"/>
                         </ComboBox>
-                        <ComboBox x:Name="yearComboBox" Width="75" Margin="5 0 0 0" SelectionChanged="ComboBox_SelectionChanged"/>
+                        <ComboBox x:Name="yearComboBox" Width="75" Margin="5 0 0 0" SelectionChanged="ComboBox_SelectionChanged" Cursor="Hand"/>
                     </StackPanel>
 
-                    <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" Grid.Column="2" RenderTransformOrigin="0.5,0.5" MouseDown="NextIconButton_MouseDown">
+                    <local:IconButton SVGSource="{StaticResource backIcon}" Width="25" Height="25" Grid.Column="2" RenderTransformOrigin="0.5,0.5" MouseDown="NextIconButton_MouseDown" Cursor="Hand">
                         <local:IconButton.RenderTransform>
                             <TransformGroup>
                                 <RotateTransform Angle="180"/>
