--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -29,9 +29,12 @@
 
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
 
-                <!--<Label Content="Sort by" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Border}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>-->
-
-                <Border x:Name="SearchBorder" Background="{StaticResource Secondary}" CornerRadius="5" Padding="5 0 5 0" IsMouseDirectlyOverChanged="SearchBorder_IsMouseDirectlyOverChanged" MouseDown="SearchBorder_MouseDown" Cursor="IBeam">
+                <Border x:Name="SearchBorder" Background="{StaticResource Secondary}" CornerRadius="5" Padding="5 0 5 0" IsMouseDirectlyOverChanged="SearchBorder_IsMouseDirectlyOverChanged" MouseMove="Border_MouseMove" MouseDown="SearchBorder_MouseDown" Cursor="IBeam">
+                    <Border.ToolTip>
+                        <ToolTip>
+                            <userControl:ButtonToolTip ToolTipText="Search" Button1Text="s"/>
+                        </ToolTip>
+                    </Border.ToolTip>
                     <DockPanel>
                         <Image Source="{StaticResource searchIcon}" Height="10" DockPanel.Dock="Right" Margin="10 0 10 0" IsHitTestVisible="False" x:Name="SearchIcon" RenderTransformOrigin="0.5,0.5"/>
                         <TextBox x:Name="SearchTextBox" Width="0" Margin="0 5 0 5" TextChanged="SearchTextBox_TextChanged" IsTabStop="False"/>
@@ -44,7 +47,7 @@
                     <ComboBoxItem Content="Due Date"/>
                 </ComboBox>
 
-                <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="AddButton_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="AddButton_MouseMove" Margin="20 0 0 0" Cursor="Hand">
+                <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="AddButton_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="20 0 0 0" Cursor="Hand">
 
                     <Border.Background>
                         <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
