Search keyboard shortcuts

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -32,7 +32,12 @@
                 <Border x:Name="SearchBorder" Background="{StaticResource Secondary}" CornerRadius="5" Padding="5 0 5 0" IsMouseDirectlyOverChanged="SearchBorder_IsMouseDirectlyOverChanged" MouseMove="Border_MouseMove" MouseDown="SearchBorder_MouseDown" Cursor="IBeam">
                     <Border.ToolTip>
                         <ToolTip>
-                            <userControl:ButtonToolTip ToolTipText="Search" Button1Text="s"/>
+                            <StackPanel Orientation="Horizontal">
+                                <userControl:ButtonToolTip ToolTipText="Search Task" Button1Text="s" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5"/>
+                                <userControl:ButtonToolTip ToolTipText="/" Button1Text="/" CornerRadius="0" BorderPadding="0 5"/>
+                                <userControl:ButtonToolTip ToolTipText="/" Button1Text="ctrl" CornerRadius="0" BorderPadding="0 5"/>
+                                <userControl:ButtonToolTip ToolTipText="+" Button1Text="f" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5"/>
+                            </StackPanel>
                         </ToolTip>
                     </Border.ToolTip>
                     <DockPanel>
