Relative date time recognition Mention the relative date or time in the task name for "Add Task" page, and it'll recognize Removed some library calls

--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -31,7 +31,7 @@
                         <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 
                         <Border x:Name="NameBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" DockPanel.Dock="Right">
-                            <TextBox x:Name="TaskNameTextbox"/>
+                            <TextBox x:Name="TaskNameTextbox" TextChanged="TaskNameTextbox_TextChanged"/>
                         </Border>
 
                     </DockPanel>
